fix(input): tags flex-flow wrap issue fix

--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -66,7 +66,7 @@ $largeWidth: 300px;
         display: flex;
         width: 100%;
         height: 100%;
-        flex-flow: column wrap;
+        flex-direction: column;
 
         .tagsContainer {
             display: flex;
